--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "css-loader": "^5.2.7",
     "install": "^0.13.0",
     "react-chartjs-2": "^5.2.0",
+    "react-quill": "^2.0.0",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-select": "^5.7.3",
